# centaur

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: deploy-lean-runtime.yml  deploy.yml  docs.yml  e2e.yml  release-chart.yml  slackbot-delivery-regression.yml
apps/slackbot/: Dockerfile  entrypoint.sh  package.json  pnpm-lock.yaml
apps/usage/: README.md  app.js  data.json  index.html  serve.py  style.css
apps/venue-scout/: package.json
apps/web/: Dockerfile  entrypoint.sh
centaur_sdk/: __init__.py  tool_sdk.py
contrib/chart/: Chart.yaml  values.dev.yaml  values.schema.json  values.yaml
contrib/scripts/: bootstrap-k8s-secrets.sh
docs/: TASKS.md  sidebar.ts  vocs.config.ts
docs/pages/: _root.css  architecture.mdx  deploying-in-production.mdx  security.mdx  what-is-centaur.mdx
e2e/: tsconfig.json  vitest.config.ts
e2e/deploy/: create-ci-secrets.sh  run-kind.sh
e2e/scenarios/: slackbot-overflow-duplicate.e2e.test.ts
migrations/versions/: 002_fix_double_serialized_events.py
monitoring/: loki.yml
plugins/: README.md
plugins/allium/: cli.py  client.py  pyproject.toml  tools.py
plugins/anchorage/: .env.example  cli.py  client.py  pyproject.toml  tools.py
plugins/bitgo/: .env.example  cli.py  client.py  pyproject.toml  tools.py
plugins/coinbase/: .env.example  cli.py  client.py  pyproject.toml  tools.py
plugins/coingecko/: cli.py  client.py  pyproject.toml  tools.py
plugins/coinmetrics/: cli.py  client.py  pyproject.toml  tools.py
plugins/defillama/: cli.py  client.py  pyproject.toml  tools.py
plugins/dune/: cli.py  client.py  pyproject.toml  tools.py
plugins/falconx/: .env.example  cli.py  client.py  pyproject.toml  tools.py
plugins/gsuite/: .env.example  cli.py  client.py  pyproject.toml  tools.py
plugins/kalshi/: cli.py  client.py  pyproject.toml  tools.py
plugins/linear/: cli.py  client.py  integrations.py  pyproject.toml  tools.py
plugins/messari/: cli.py  client.py  pyproject.toml  tools.py
plugins/nansen/: cli.py  client.py  pyproject.toml  tools.py
plugins/notion/: cli.py  client.py  pyproject.toml  tools.py
plugins/polymarket/: cli.py  client.py  pyproject.toml  tools.py
plugins/posthog/: cli.py  client.py  pyproject.toml  tools.py
plugins/reshift/: .env.example  __init__.py  cli.py  pyproject.toml  tools.py
plugins/reshift/integrations/database/: __init__.py  bigquery.py  client.py
plugins/reshift/integrations/gsuite/: __init__.py  auth.py  calendar.py  drive.py  gmail.py
plugins/reshift/integrations/llm/: __init__.py  client.py
plugins/reshift/integrations/notes/: __init__.py  client.py
plugins/reshift/integrations/slack/: __init__.py  client.py
plugins/similarweb/: cli.py  client.py  pyproject.toml  tools.py
plugins/slack/: .env.example  client.py  pyproject.toml
plugins/slack/src/ai_v2_plugin_slack/: cli.py  tools.py
profiles/: default.json
sandbox/: SYSTEM_PROMPT.md  call.sh  harness_session.py  slack-upload.sh
scripts/: auth-bootstrap.js  deploy-notify.sh  smoke-k8s-sandbox-backend.sh
services/api/: Dockerfile  bootstrap-secrets.sh  entrypoint.sh  pyproject.toml
services/api/api/: agent.py  api_keys.py  app.py  chat_sdk.py  final_delivery.py  iron-proxy.base.yaml  logging_config.py  models.py  runtime_control.py  runtime_guardrails.py  slackbot_v2_client.py  tool_manager.py  vm_metrics.py  warm_pool.py  workflow_engine.py
services/api/api/routers/: agent.py  attachments.py  workflows.py
services/api/api/sandbox/: base.py  config.py  docker.py  harness_protocol.py  kubernetes.py  normalize.py  registry.py
services/api/api/workflows/: agent_turn.py  chat_thread_turn.py  multi_step_demo.py  paradigm_pulse_daily.py  slack_thread_turn.py
services/api/db/migrations/: 004_add_wire_tracking.sql  013_workflow_engine.sql
services/api/tests/: conftest.py  test_agent_control_plane.py  test_attachments.py  test_chat_sdk.py  test_codex_app_wrapper.py  test_daily_checklist_workflow.py  test_harmonic_job_change_monitor.py  test_harness_protocol.py  test_integration.py  test_no_busy_guard.py  test_normalize.py  test_runtime_guardrails.py  test_sandbox_docker_backend.py  test_sandbox_entrypoint.py  test_sandbox_kubernetes_backend.py  test_slack_upload_sh.py  test_sse_keepalive.py  test_stream_exec.py  test_tool_manager.py  test_url_interceptor.py  test_warm_pool.py  test_workflows.py
services/auth/: Dockerfile  entrypoint.sh  main.py
services/firewall/: addon.py
services/firewall-manager/: manager.py
services/fluentbit/: Dockerfile
services/iron-proxy/: Dockerfile  iron-proxy.yaml
services/nginx/: entrypoint.sh  nginx.conf
services/pgbouncer/: Dockerfile  entrypoint.sh
services/sandbox/: Dockerfile  SYSTEM_PROMPT.md  codex-app-wrapper.py  entrypoint.sh  harness_session.py  slack-upload.sh
services/slackbot/: .env.example  .gitignore  .npmrc  Dockerfile  env.d.ts  next.config.ts  oxfmt.config.ts  oxlint.config.ts  package.json  tsconfig.json  vitest.config.ts
services/web/: package.json
src/ai_v2/: app.py  plugin_manager.py  plugin_sdk.py
src/api/: agent.py  app.py  deps.py  pipe_agent.py  warm_pool.py
src/secret_backends/: __init__.py  composite.py  dotenv.py  env.py  http.py  registry.py
src/secret_manager/: app.py
src/shared/: cli.py  config.py  plugin_manager.py  tool_sdk.py
tools-paradigm/bloomberg/: client.py
tools-paradigm/gsuite/: cli.py  client.py  pyproject.toml  test_client.py
tools-paradigm/slack/: client.py
tools/addepar/: client.py
tools/affinity/: client.py
tools/alchemy/: client.py
tools/allium/: client.py
tools/alphasense/: client.py
tools/arkham/: client.py
tools/productivity/company_context/: client.py  pyproject.toml
tools/productivity/company_context/tests/: test_client.py
tools/research/plural/: pyproject.toml
workflows/: daily_checklist_digest.py  harmonic_job_change_monitor.py  harmonic_job_change_monitors.json  morning_market_brief.py  policy_news_monitor.py  self_improve_daily.py  usage_stats.py
(+236 files in other folders)
