[project]
name = "ai-v2-plugin-coinmetrics"
description = "Coin Metrics API — asset metrics, market data, timeseries, exchanges"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
coinmetrics-plugin = "coinmetrics_plugin.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ai-v2-plugin]
module = "tools.py"
