[project]
name = "ai-v2-plugin-falconx"
description = "FalconX trading API — quotes, execution, balances, trade history"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
falconx-plugin = "falconx_plugin.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ai-v2-plugin]
module = "tools.py"
