[project]
name = "ai-v2-plugin-reshift"
description = "Paradigm I&R Knowledge Platform — internal DB, shift notes, BigQuery"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.1.0",
    "sshtunnel>=0.4.0",
    "google-cloud-bigquery>=3.0.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-api-python-client>=2.100.0",
    "anthropic>=0.34.0",
    "slack-bolt>=1.18.0",
    "slack-sdk>=3.23.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
reshift-plugin = "reshift_plugin.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ai-v2-plugin]
module = "tools.py"
