[project]
name = "ai-v2-plugin-slack"
description = "Search Slack messages, channels, threads, users"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "slack-sdk>=3.27.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
slack-plugin = "ai_v2_plugin_slack.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_v2_plugin_slack"]

[tool.ai-v2-plugin]
module = "src/ai_v2_plugin_slack/tools.py"
