[project]
name = "centaur-api"
version = "0.1.0"
description = "Centaur API server"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "anthropic>=0.54.0",
    "pgvector>=0.3.6",
    "httpx>=0.28.0",
    "openai>=1.60.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "mcp>=1.0.0",
    "toon-format @ git+https://github.com/toon-format/toon-python.git",
    "docker>=7.0.0",
    "psycopg2-binary>=2.9.11",
    "centaur-sdk",
]

[tool.uv.sources]
centaur-sdk = { path = "../../centaur_sdk", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["api"]
