[project]
name = "gsuite"
description = "Gmail, Calendar, Drive, Docs, Sheets, Slides, Analytics"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-analytics-data>=0.18.0",
    "google-analytics-admin>=0.22.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
gsuite = "gsuite.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ai-v2]
module = "client.py"
hosts = ["*.googleapis.com"]
secrets = ["GOOGLE_CREDENTIALS_JSON", "GOOGLE_TOKEN_JSON"]
