[project]
name = "plural"
description = "Plural (Open States) API — state legislation, legislators, committees, and events"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ai-v2]
module = "client.py"
hosts = ["v3.openstates.org"]
secrets = ["PLURAL_API_KEY"]
